# pdffinder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pdffinder/: cli.py  downloader.py  scanner.py  search.py
pdffinder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
