[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pdffinder"
version = "0.1.0"
description = "Search, download, and scan PDFs from the web"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/mnsdojo/pdffinder"
Repository = "https://github.com/mnsdojo/pdffinder"

[project.scripts]
pdffinder = "pdffinder.cli:app"

[tool.setuptools.packages.find]
include = ["pdffinder*"]
